<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/name_entry"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:inputType="text"
        android:hint="@string/name_entry_text"/>

    <EditText
        android:id="@+id/surname_entry"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:inputType="text"
        android:hint="@string/surname_entry_text"/>

    <EditText
        android:id="@+id/title_entry"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:inputType="text"
        android:hint="@string/title_entry_text"/>

    <EditText
        android:id="@+id/info_entry"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:inputType="text"
        android:maxLength="30"
        android:hint="@string/info_entry_text"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_text" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_text"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_text" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_text" />

    <Button
        android:id="@+id/button_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list_text" />

</LinearLayout>